# mm2image

./: .flake8  .gitignore  README.md  dev-requirements.in  dev-requirements.txt  environment.yml  file1.mm  file2.mm  file3.mm  mm2image.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tasks.py
.github/workflows/: build.yml
src/mm2image/: cli.py  gui.py  main.py
