[metadata]
name = mm2image
author = tumregels
summary = Saves mermaid diagrams as an image
license = MIT
description_file =
    README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/tumregels/mm2image
python_requires = >=3.8, <4
classifier =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Desktop Environment
    Topic :: Education

[pbr]
skip_authors = True
skip_changelog = False

[files]
py_modules =
    mm2image

[entry_points]
console_scripts =
    mm2image = mm2image:main